unpackaged/main/default/objects/nbavs__RegisteredNumber__c/nbavs__RegisteredNumber__c.object-meta.xml
<CustomObject>
    <label>Associated Number</label>
    <nameField>
        <label>Phone Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Associated Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>