unpackaged/main/default/objects/nbavs__RegisteredNumber__c/fields/nbavs__CallQueueEnabled__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CallQueueEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Call Queue Enabled</label>
    <type>Checkbox</type>
</CustomField>