unpackaged/main/default/objects/nbavs__RegisteredNumber__c/fields/nbavs__CallQueueMaster__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CallQueueMaster__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable CTI Tracking For Call Queue</label>
    <type>Checkbox</type>
</CustomField>