unpackaged/main/default/objects/nbavs__RegisteredNumber__c/fields/nbavs__CallQueueScreeningEnabled__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CallQueueScreeningEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Queue Screening Enabled</label>
    <type>Checkbox</type>
</CustomField>