unpackaged/main/default/objects/nbavs__RegisteredNumber__c/fields/nbavs__NumberOwnership__c.field-meta.xml
<CustomField>
    <fullName>nbavs__NumberOwnership__c</fullName>
    <label>Number Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
                <default>true</default>
                <label>Private</label>
            </value>
            <value>
                <fullName>PASSIVE</fullName>
                <label>Shared</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>