unpackaged/main/default/objects/nbavs__RegisteredNumber__c/fields/nbavs__RouteGroup__c.field-meta.xml
<CustomField>
    <fullName>nbavs__RouteGroup__c</fullName>
    <label>User Dial (as group member)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Enabled with Screening</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
                <default>true</default>
                <label>Disabled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>