unpackaged/main/default/objects/nbavs__RegisteredNumber__c/fields/nbavs__Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLI</fullName>
                <default>true</default>
                <label>CLI</label>
            </value>
            <value>
                <fullName>HOME</fullName>
            </value>
            <value>
                <fullName>MOBILE</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
            <value>
                <fullName>WORK</fullName>
            </value>
            <value>
                <fullName>MS_TEAMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>