unpackaged/main/default/objects/nbavs__RegisteredNumber__c/fields/nbavs__User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__User__c</fullName>
    <label>Natterbox User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipName>Registered_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>